# Quadruped_Control

./: LICENSE  README.md
Code/: main.py
Code/Python/: main.py
Code/hello-rust/: Cargo.toml
Code/hello-rust/hello-rust/: Cargo.toml
Code/hello-rust/hello-rust/src/: main.rs
Code/hello-rust/hello-rust/ui/: appwindow.slint
Code/hello-rust/src/: main.rs
SerialTesting/: platformio.ini
SerialTesting/src/: SerialTesting.code-workspace  main.cpp
