[package]
name = "hello-rust"
version = "0.1.0"
authors = ["Shane Wood <townlake101@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4"
serialport = "3.2.1"

[build-dependencies]
slint-build = "1.4"
